--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/wangyq1996/CSBasic#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
