chore: update notes

--- a/amis/package.json
+++ b/amis/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@arco-design/web-react": "^2.59.1",
+    "@bytecloud/common-lib": "^7.18.0",
+    "@byted-sre/bpm-env": "^1.3.0",
+    "@byted/bpm": "^2.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "amis": "^3.6.4",
+    "amis": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -45,6 +48,9 @@
     "@babel/runtime": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
